--- a/src/App.css
+++ b/src/App.css
@@ -13,40 +13,14 @@
   color: #61dafb;
 }
 
-.screen-container {
-  background-color: #ffffff;
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-}
-
 .game-container {
   height: 100vh;
-  width: 75vw;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  position:absolute;
-}
-
-.rules-container{
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  width: 25vw;
-  background-color: #788ca5;
-}
-
-.rules-text{
-  font-size: calc(3px + 1vmin);
-  padding: 5px;
-  font-weight: 500;
-}
-
-.suitImg{
-  width:5%;
-  max-width:13px;
+  position:relative;
 }
 
 .game-opponent{
@@ -76,13 +50,13 @@
 }
 
 .player-action {
-  width: 30%;
+  width: 25%;
   height: 100%;
   display:flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  padding-left: 5vh;
+  padding-left: 2vw;
 }
 
 .player-button{
@@ -103,7 +77,7 @@
   outline: none;
   max-width: 40%;
   min-width:40%;
-  max-height: 20%;
+  max-height: 22%;
   font-size: 1vw;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   transition: all 0.2s;
@@ -120,7 +94,7 @@
 }
 .player-container {
   height: 25vh;
-  width: 85%;
+  width: 60%;
   display: flex;
   align-self: center;
   align-items: center;
@@ -259,29 +233,37 @@
 }
 
 .slit-in-vertical {
-	-webkit-animation: slit-in-vertical 0.45s ease-out both;
-	        animation: slit-in-vertical 0.45s ease-out both;
+  -webkit-animation: slit-in-vertical 0.45s ease-out both;
+          animation: slit-in-vertical 0.45s ease-out both;
 }
 
 .flip-in-ver-left {
-	-webkit-animation: flip-in-ver-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-	        animation: flip-in-ver-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  -webkit-animation: flip-in-ver-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+          animation: flip-in-ver-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
 .tracking-in-expand-fwd {
-	-webkit-animation: tracking-in-expand-fwd 1.3s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+  -webkit-animation: tracking-in-expand-fwd 1.3s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
           animation: tracking-in-expand-fwd 1.3s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
           text-shadow: -6px 6px 18px rgba(0, 0, 0, 0.35);
 }
 
 .resetButton{
   position: absolute;
-  right: 25.5vw;
+  right: 15.5vw;
   top: 0.5vh;
   cursor:pointer;
+  border-radius:1em;
+  background-color: #901800;
+  padding:0.3em 1.2em;
+  margin:0 0.1em 0.1em 0;
+  font-family:'Roboto',sans-serif;
+  font-weight:300;
+  color:#FFFFFF;
+  text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+  font-size: 1vw;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-
-
 
 
 
