--- a/src/App.css
+++ b/src/App.css
@@ -50,8 +50,8 @@
 }
 
 .player-action {
-  width: 25%;
-  height: 100%;
+  width: 32%;
+  height: 80%;
   display:flex;
   flex-direction: column;
   align-items: center;
@@ -61,10 +61,11 @@
 
 .player-button{
   cursor:pointer;
+  position: relative;
+  left: 6vw;
   display:inline-block;
   background-color: #901800;
   padding:0.3em 1.2em;
-  margin:0 0.1em 0.1em 0;
   border:0.16em solid rgba(255,255,255,0);
   border-radius:2em;
   box-sizing: border-box;
@@ -77,7 +78,7 @@
   outline: none;
   max-width: 40%;
   min-width:40%;
-  max-height: 22%;
+  max-height: 20%;
   font-size: 1vw;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   transition: all 0.2s;
@@ -207,16 +208,16 @@
 }
 
 .computer-side{
-  width: 50px;
-  height: 75px;
+  width: 70px;
+  height: 85px;
   margin-bottom: -50px;
   transform: rotate(90deg) translateY(-1vh);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .computer-top{
-  width: 50px;
-  height: 75px;
+  width: 60px;
+  height: 90px;
   margin-right:-15px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
