--- a/src/App.css
+++ b/src/App.css
@@ -65,13 +65,14 @@
   left: 6vw;
   display:inline-block;
   background-color: #901800;
+  background-image:url(./res/redbutton.png);
   padding:0.3em 1.2em;
   border:0.16em solid rgba(255,255,255,0);
-  border-radius:2em;
+  border-radius:1em;
   box-sizing: border-box;
   text-decoration:none;
-  font-family:'Roboto',sans-serif;
-  font-weight:300;
+  font-family: 'Press Start 2P', cursive;
+  font-weight:200;
   color:#FFFFFF;
   text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
   text-align:center;
@@ -79,14 +80,31 @@
   max-width: 40%;
   min-width:40%;
   max-height: 20%;
-  font-size: 1vw;
+  font-size: 0.8vh;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   transition: all 0.2s;
+}
+.reset-button{
+  position: absolute;
+  right: 15.5vw;
+  top: 0.5vh;
+  cursor:pointer;
+  border-radius:0.6em;
+  background-color: #901800;
+  padding:0.3em 1.2em;
+  margin:0 0.1em 0.1em 0;
+  font-family: 'Press Start 2P', cursive;
+  font-weight:300;
+  color:#FFFFFF;
+  text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+  font-size: 1vw;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .disabled-button{
   cursor: default;
   background-color:#424242;
+  background-image:url(./res/greybutton.png);
 }
 
 .player-button:hover{
@@ -109,28 +127,28 @@
 
 }
 
-.playingfield-container{
+.gameplayfield-container{
   height: 65vh;
   width: 100%;
   display:flex;
   flex-direction: column;
 }
 
-.playingfield-section{
+.gameplayfield-section{
   display:flex;
   align-items: center;
   width: 100%;
   height: 33.3%;
 }
 
-.playingfield-player{
+.gameplayfield-player{
   display:flex;
   flex-direction: row;
   height: 85%;
 }
-.playingfield-text{
+.gameplayfield-text{
   font-size: 1.3vw;
-  font-family: roboto;
+  font-family: 'Press Start 2P', cursive;
   height: 15%;
 }
 .section-middle{
@@ -249,22 +267,7 @@
           text-shadow: -6px 6px 18px rgba(0, 0, 0, 0.35);
 }
 
-.resetButton{
-  position: absolute;
-  right: 15.5vw;
-  top: 0.5vh;
-  cursor:pointer;
-  border-radius:1em;
-  background-color: #901800;
-  padding:0.3em 1.2em;
-  margin:0 0.1em 0.1em 0;
-  font-family:'Roboto',sans-serif;
-  font-weight:300;
-  color:#FFFFFF;
-  text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
-  font-size: 1vw;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
+
 
 
 
