--- a/src/App.css
+++ b/src/App.css
@@ -1,433 +1,484 @@
 .App {
-  text-align: center;
-  background-image: linear-gradient(rgba(255, 255, 255, 0.219), rgba(255, 255, 255, 0.283)), url(./res/mario-background2.png);
+	text-align: center;
+	background-image: linear-gradient(rgba(255, 255, 255, 0.219), rgba(255, 255, 255, 0.283)),
+		url(./res/mario-background2.png);
 }
 .App-header {
-  min-height: 100vh;
-  display: flex;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	min-height: 100vh;
+	display: flex;
+	font-size: calc(10px + 2vmin);
+	color: white;
 }
 
 .App-link {
-  color: #61dafb;
+	color: #61dafb;
 }
 
 .game-container {
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  position:relative;
+	height: 100vh;
+	width: 100vw;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
+	position: relative;
 }
 
-.game-opponent{
-  display:flex;
+.game-opponent {
+	display: flex;
 }
 
-.game-player{
-  display:flex;
+.game-player {
+	display: flex;
 }
 
 .game-left {
-  height: 100%;
-  width: 10vw;
+	height: 100%;
+	width: 10vw;
 }
 
 .game-middle {
-  height: 100%;
-  width: 55vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+	height: 100%;
+	width: 55vw;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 }
 
 .game-right {
-  height: 100%;
-  width: 10vw;
+	height: 100%;
+	width: 10vw;
 }
 
 .player-action {
-  width: 32%;
-  height: 80%;
-  display:flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-  padding-left: 2vw;
+	width: 32%;
+	height: 80%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-around;
+	padding-left: 2vw;
 }
 
-.player-button{
-  cursor:pointer;
-  position: relative;
-  left: 6vw;
-  display:inline-block;
-  background-color: #901800;
-  background-image:url(./res/redbutton.png);
-  padding:0.3em 1.2em;
-  border:0.16em solid rgba(255,255,255,0);
-  border-radius:1em;
-  box-sizing: border-box;
-  text-decoration:none;
-  font-family: 'Press Start 2P', cursive;
-  font-weight:200;
-  color:#FFFFFF;
-  text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
-  text-align:center;
-  outline: none;
-  min-width:30%;
-  max-height: 30%;
-  font-size: 1.0vh;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  transition: all 0.2s;
+.player-button {
+	cursor: pointer;
+	position: relative;
+	left: 6vw;
+	display: inline-block;
+	background-color: #901800;
+	padding: 0.3em 1.2em;
+	border: 0.16em solid rgba(255, 255, 255, 0);
+	border-radius: 1em;
+	box-sizing: border-box;
+	text-decoration: none;
+	font-family: 'Press Start 2P', cursive;
+	font-weight: 200;
+	color: #ffffff;
+	text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+	text-align: center;
+	outline: none;
+	min-width: 30%;
+	max-height: 30%;
+	font-size: 1vh;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	transition: all 0.2s;
 }
-.reset-button{
-  position: absolute;
-  right: 15.5vw;
-  top: 0.5vh;
-  cursor:pointer;
-  border-radius:0.6em;
-  background-color: #901800;
-  padding:0.3em 1.2em;
-  margin:0 0.1em 0.1em 0;
-  font-family: 'Press Start 2P', cursive;
-  font-weight:300;
-  color:#FFFFFF;
-  text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
-  font-size: 1.0vh;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.disabled-button{
-  cursor: default;
-  background-color:#424242;
-  background-image:url(./res/greybutton.png);
+.reset-button {
+	position: absolute;
+	right: 15.5vw;
+	top: 0.5vh;
+	cursor: pointer;
+	border-radius: 0.6em;
+	background-color: #901800;
+	padding: 0.3em 1.2em;
+	margin: 0 0.1em 0.1em 0;
+	font-family: 'Press Start 2P', cursive;
+	font-weight: 300;
+	color: #ffffff;
+	text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+	font-size: 1vh;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.player-button:hover{
- border-color: rgba(255,255,255,1);
- border-radius:2em;
+.disabled-button {
+	cursor: default;
+	background-color: #424242;
+}
+
+.player-button:hover {
+	border-color: rgba(255, 255, 255, 1);
+	border-radius: 2em;
 }
 .player-container {
-  height: 25vh;
-  width: 60%;
-  display: flex;
-  align-self: center;
-  align-items: center;
-  justify-content: space-between;
-  padding-bottom:1vh;
+	height: 25vh;
+	width: 60%;
+	display: flex;
+	align-self: center;
+	align-items: center;
+	justify-content: space-between;
+	padding-bottom: 1vh;
 }
 
 .card-container {
-  display: flex;
-
-
+	display: flex;
 }
 
-.gameplayfield-container{
-  height: 65vh;
-  width: 100%;
-  display:flex;
-  flex-direction: column;
+.gameplayfield-container {
+	height: 65vh;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
 }
 
-.gameplayfield-section{
-  display:flex;
-  align-items: center;
-  width: 100%;
-  height: 33.3%;
+.gameplayfield-section {
+	display: flex;
+	align-items: center;
+	width: 100%;
+	height: 33.3%;
 }
 
-.gameplayfield-player{
-  display:flex;
-  flex-direction: row;
-  height: 85%;
+.gameplayfield-player {
+	display: flex;
+	flex-direction: row;
+	height: 85%;
 }
-.gameplayfield-text{
-  font-size: 1.3vw;
-  font-family: 'Press Start 2P', cursive;
-  height: 15%;
+.gameplayfield-text {
+	font-size: 1.3vw;
+	font-family: 'Press Start 2P', cursive;
+	height: 15%;
 }
-.section-middle{
-  justify-content: space-evenly
-}
-
-.section-top{
-  justify-content: center;
+.section-middle {
+	justify-content: space-evenly;
 }
 
-#player{
-  flex-direction: column;
+.section-top {
+	justify-content: center;
 }
 
-.left-field{
-  display:flex;
-  align-items: center;
-  justify-content: center;
-  width: 50%;
-  height: 100%;
+#player {
+	flex-direction: column;
 }
 
-.right-field{
-  display:flex;
-  width: 50%;
-  height: 100%;
-  align-items: center;
-  flex-direction: row;
-  justify-content: center;
+.left-field {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 50%;
+	height: 100%;
+}
+
+.right-field {
+	display: flex;
+	width: 50%;
+	height: 100%;
+	align-items: center;
+	flex-direction: row;
+	justify-content: center;
 }
 
 .opponent-container {
-  height: 10vh;
-  width: 100%;
-  display: flex;
-  align-self: center;
-  justify-content: center;
-  align-items: center;
+	height: 10vh;
+	width: 100%;
+	display: flex;
+	align-self: center;
+	justify-content: center;
+	align-items: center;
 }
 
 .opponent-container-left {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-  
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	height: 100%;
 }
 
 .opponent-container-right {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	height: 100%;
 }
 
-.card{
-  cursor: pointer;
-  width: 90px;
-  height: 140px;
-  max-height: 95%;
-  margin-right:-60px;
-  border-radius: 4px;
-  transition: all 0.5s cubic-bezier(.25,.8,.25,1);
-  box-shadow: 2px 4px 8px 2px rgba(0, 0, 0, 0.2), 2px 6px 20px 2px rgba(0, 0, 0, 0.19);
+.card {
+	cursor: pointer;
+	width: 90px;
+	height: 140px;
+	max-height: 95%;
+	margin-right: -60px;
+	border-radius: 4px;
+	transition: all 0.5s cubic-bezier(0.25, 0.8, 0.25, 1);
+	box-shadow: 2px 4px 8px 2px rgba(0, 0, 0, 0.2), 2px 6px 20px 2px rgba(0, 0, 0, 0.19);
 }
 
-.field-card{
-  width: 90px;
-  height: 140px;
-  margin-right:-60px;
-  border-radius: 4px;
-  filter: blur(0);
-  -webkit-filter: blur(0);
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+.field-card {
+	width: 90px;
+	height: 140px;
+	margin-right: -60px;
+	border-radius: 4px;
+	filter: blur(0);
+	-webkit-filter: blur(0);
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.computer-side{
-  width: 70px;
-  height: 85px;
-  margin-bottom: -50px;
-  transform: rotate(90deg) translateY(-1vh);
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+.computer-side {
+	width: 70px;
+	height: 85px;
+	margin-bottom: -50px;
+	transform: rotate(90deg) translateY(-1vh);
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.computer-top{
-  width: 60px;
-  height: 90px;
-  margin-right:-15px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+.computer-top {
+	width: 60px;
+	height: 90px;
+	margin-right: -15px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.selectedcard{
-  margin-bottom: 40px;
-  border-radius: 6px;
-  box-shadow: 0px 0px 5px #fff !important;
+.selectedcard {
+	margin-bottom: 40px;
+	border-radius: 6px;
+	box-shadow: 0px 0px 5px #fff !important;
 }
 
-.card:hover{
-    margin-bottom: 40px;
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+.card:hover {
+	margin-bottom: 40px;
+	box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 .slit-in-vertical {
-  -webkit-animation: slit-in-vertical 0.45s ease-out both;
-          animation: slit-in-vertical 0.45s ease-out both;
+	-webkit-animation: slit-in-vertical 0.45s ease-out both;
+	animation: slit-in-vertical 0.45s ease-out both;
 }
 
 .flip-in-ver-left {
-  -webkit-animation: flip-in-ver-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-          animation: flip-in-ver-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	-webkit-animation: flip-in-ver-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+	animation: flip-in-ver-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
 
 .tracking-in-expand-fwd {
-  -webkit-animation: tracking-in-expand-fwd 1.3s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
-          animation: tracking-in-expand-fwd 1.3s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
-          text-shadow: -6px 6px 18px rgba(0, 0, 0, 0.35);
+	-webkit-animation: tracking-in-expand-fwd 1.3s cubic-bezier(0.215, 0.61, 0.355, 1) both;
+	animation: tracking-in-expand-fwd 1.3s cubic-bezier(0.215, 0.61, 0.355, 1) both;
+	text-shadow: -6px 6px 18px rgba(0, 0, 0, 0.35);
 }
 
-
-
-
-
- @-webkit-keyframes tracking-in-expand-fwd {
-  0% {
-    letter-spacing: -0.5em;
-    -webkit-transform: translateZ(-700px);
-            transform: translateZ(-700px);
-    opacity: 0;
-  }
-  80% {
-    opacity: 1;
-    -webkit-transform: translateZ(0);
-            transform: translateZ(0);
-  }
-  100% {
-    opacity: 0;
-  }
+@-webkit-keyframes tracking-in-expand-fwd {
+	0% {
+		letter-spacing: -0.5em;
+		-webkit-transform: translateZ(-700px);
+		transform: translateZ(-700px);
+		opacity: 0;
+	}
+	80% {
+		opacity: 1;
+		-webkit-transform: translateZ(0);
+		transform: translateZ(0);
+	}
+	100% {
+		opacity: 0;
+	}
 }
 @keyframes tracking-in-expand-fwd {
-  0% {
-    letter-spacing: -0.5em;
-    -webkit-transform: translateZ(-700px);
-            transform: translateZ(-700px);
-    opacity: 0;
-  }
-  80% {
-    opacity: 1;
-    -webkit-transform: translateZ(0);
-            transform: translateZ(0);
-  }
-  100% {
-    opacity: 0;
-  }
+	0% {
+		letter-spacing: -0.5em;
+		-webkit-transform: translateZ(-700px);
+		transform: translateZ(-700px);
+		opacity: 0;
+	}
+	80% {
+		opacity: 1;
+		-webkit-transform: translateZ(0);
+		transform: translateZ(0);
+	}
+	100% {
+		opacity: 0;
+	}
+}
+
+/* Add some padding inside the card container */
+.rules-container {
+	display: flex;
+	@include flexCenter;
+	padding: 3rem;
+	height: 100%;
+	position: relative;
+}
+.rules {
+	/* Add shadows to create the "card" effect */
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+	transition: 0.3s;
+	width: 70vw;
+	background-color: #acbefc;
+	background-size: cover;
+	flex: initial;
+  flex-flow: row;
+  align-items: center;
+  justify-content: center;
+	position: relative;
+	height: 65rem;
+	width: 80rem;
+	-moz-perspective: 200rem;
+	perspective: 200rem;
+	margin: 2rem;
+	border-radius: 2rem;
+  font-family: "VT323", monospace;
+  text-transform: uppercase;
+  font-size: 6rem;
+  font-weight: 100;
 }
 
 
+/* On mouse-over, add a deeper shadow */
+.rules:hover {
+	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
 
+.rules-heading{
+  font-family: "VT323", monospace;
+  text-transform: uppercase;
+  font-size: 6rem;
+  font-weight: 100;
+}
+.rules-details{
+  font-family: "VT323", monospace;
+  list-style-type: none; /* Remove bullets */
+  font-size: 2.3rem;
+  font-weight: 100;
+}
 
-
+.start-button{
+  margin: 1rem;
+	border-radius: 3rem;
+  max-width: fit-content;
+  cursor:pointer;
+}
+.start-button:hover{
+  box-shadow: 10px 10px 5px rgb(186, 217, 247);
+      -moz-box-shadow: 10px 10px 5px rgb(186, 217, 247);
+      -webkit-box-shadow: 10px 10px 5px rgb(186, 217, 247);
+      -khtml-box-shadow: 10px 10px 5px rgb(186, 217, 247);
+  
+}
 @-webkit-keyframes flip-in-ver-left {
-  0% {
-    -webkit-transform: rotateY(80deg);
-            transform: rotateY(80deg);
-    opacity: 0;
-  }
-  100% {
-    -webkit-transform: rotateY(0);
-            transform: rotateY(0);
-    opacity: 1;
-  }
+	0% {
+		-webkit-transform: rotateY(80deg);
+		transform: rotateY(80deg);
+		opacity: 0;
+	}
+	100% {
+		-webkit-transform: rotateY(0);
+		transform: rotateY(0);
+		opacity: 1;
+	}
 }
 @keyframes flip-in-ver-left {
-  0% {
-    -webkit-transform: rotateY(80deg);
-            transform: rotateY(80deg);
-    opacity: 0;
-  }
-  100% {
-    -webkit-transform: rotateY(0);
-            transform: rotateY(0);
-    opacity: 1;
-  }
+	0% {
+		-webkit-transform: rotateY(80deg);
+		transform: rotateY(80deg);
+		opacity: 0;
+	}
+	100% {
+		-webkit-transform: rotateY(0);
+		transform: rotateY(0);
+		opacity: 1;
+	}
 }
-
 
 @-webkit-keyframes slit-in-vertical {
-  0% {
-    -webkit-transform: translateZ(-800px) rotateY(90deg);
-            transform: translateZ(-800px) rotateY(90deg);
-    opacity: 0;
-  }
-  54% {
-    -webkit-transform: translateZ(-160px) rotateY(87deg);
-            transform: translateZ(-160px) rotateY(87deg);
-    opacity: 1;
-  }
-  100% {
-    -webkit-transform: translateZ(0) rotateY(0);
-            transform: translateZ(0) rotateY(0);
-  }
+	0% {
+		-webkit-transform: translateZ(-800px) rotateY(90deg);
+		transform: translateZ(-800px) rotateY(90deg);
+		opacity: 0;
+	}
+	54% {
+		-webkit-transform: translateZ(-160px) rotateY(87deg);
+		transform: translateZ(-160px) rotateY(87deg);
+		opacity: 1;
+	}
+	100% {
+		-webkit-transform: translateZ(0) rotateY(0);
+		transform: translateZ(0) rotateY(0);
+	}
 }
 @keyframes slit-in-vertical {
-  0% {
-    -webkit-transform: translateZ(-800px) rotateY(90deg);
-            transform: translateZ(-800px) rotateY(90deg);
-    opacity: 0;
-  }
-  54% {
-    -webkit-transform: translateZ(-160px) rotateY(87deg);
-            transform: translateZ(-160px) rotateY(87deg);
-    opacity: 1;
-  }
-  100% {
-    -webkit-transform: translateZ(0) rotateY(0);
-            transform: translateZ(0) rotateY(0);
-  }
+	0% {
+		-webkit-transform: translateZ(-800px) rotateY(90deg);
+		transform: translateZ(-800px) rotateY(90deg);
+		opacity: 0;
+	}
+	54% {
+		-webkit-transform: translateZ(-160px) rotateY(87deg);
+		transform: translateZ(-160px) rotateY(87deg);
+		opacity: 1;
+	}
+	100% {
+		-webkit-transform: translateZ(0) rotateY(0);
+		transform: translateZ(0) rotateY(0);
+	}
 }
 
 @keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
+	0% {
+		opacity: 0;
+	}
 
-  25% {
-    opacity: 1
-  }
+	25% {
+		opacity: 1;
+	}
 
-  100% {
-    opacity: 1;
-  }
+	100% {
+		opacity: 1;
+	}
 }
 
-@media (max-width: 1200px), (max-height: 800px){
-  .card{
-    width: 75px;
-    height: 115px;
-    margin-right:-50px;
-  }
+@media (max-width: 1200px), (max-height: 800px) {
+	.card {
+		width: 75px;
+		height: 115px;
+		margin-right: -50px;
+	}
 
-  .field-card{
-    width: 60px;
-    height: 92px;
-    margin-right:-40px;
-  }
-  
-  .computer-side{
-    width: 40px;
-    height: 60px;
-    margin-bottom: -40px;
-  }
-  
-  .computer-top{
-    width: 40px;
-    height: 60px;
-    margin-right:-15px;
-  }
+	.field-card {
+		width: 60px;
+		height: 92px;
+		margin-right: -40px;
+	}
+
+	.computer-side {
+		width: 40px;
+		height: 60px;
+		margin-bottom: -40px;
+	}
+
+	.computer-top {
+		width: 40px;
+		height: 60px;
+		margin-right: -15px;
+	}
 }
 
 @media (max-width: 820px) {
-  .card{
-    width: 60px;
-    height: 92px;
-    margin-right:-50px;
-  }
+	.card {
+		width: 60px;
+		height: 92px;
+		margin-right: -50px;
+	}
 
-  .field-card{
-    width: 40px;
-    height: 60px;
-    margin-right:-25px;
-  }
+	.field-card {
+		width: 40px;
+		height: 60px;
+		margin-right: -25px;
+	}
 
-  .computer-side{
-    width: 30px;
-    height: 46px;
-    margin-bottom: -40px;
-  }
-  
-  .computer-top{
-    width: 30px;
-    height: 46px;
-    margin-right:-15px;
-  }
+	.computer-side {
+		width: 30px;
+		height: 46px;
+		margin-bottom: -40px;
+	}
+
+	.computer-top {
+		width: 30px;
+		height: 46px;
+		margin-right: -15px;
+	}
 }
