--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,6 @@
 .App {
 	text-align: center;
-
 }
-.App-logo {
-	height: 40vmin;
-	pointer-events: none;
-}
-
 
 .App-header {
 	background-color: #011233;
@@ -29,7 +23,6 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: space-between;
 	position: relative;
 	background-image: linear-gradient(rgba(255, 255, 255, 0.219), rgba(255, 255, 255, 0.283)),
 		url(./res/mario-background2.png);
@@ -265,17 +258,12 @@
 .selectedcard {
 	margin-bottom: 40px;
 	border-radius: 6px;
-	box-shadow: 0px 0px 5px #fff !important;
+	box-shadow: 0px 0px 5px #fff;
 }
 
 .card:hover {
 	margin-bottom: 40px;
 	box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-}
-
-.slit-in-vertical {
-	-webkit-animation: slit-in-vertical 0.45s ease-out both;
-	animation: slit-in-vertical 0.45s ease-out both;
 }
 
 .flip-in-ver-left {
@@ -292,44 +280,10 @@
 	text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
 }
 
-@-webkit-keyframes tracking-in-expand-fwd {
-	0% {
-		letter-spacing: -0.5em;
-		-webkit-transform: translateZ(-700px);
-		transform: translateZ(-700px);
-		opacity: 0;
-	}
-	80% {
-		opacity: 1;
-		-webkit-transform: translateZ(0);
-		transform: translateZ(0);
-	}
-	100% {
-		opacity: 0;
-	}
-}
-@keyframes tracking-in-expand-fwd {
-	0% {
-		letter-spacing: -0.5em;
-		-webkit-transform: translateZ(-700px);
-		transform: translateZ(-700px);
-		opacity: 0;
-	}
-	80% {
-		opacity: 1;
-		-webkit-transform: translateZ(0);
-		transform: translateZ(0);
-	}
-	100% {
-		opacity: 0;
-	}
-}
-
-/* Add some padding inside the card container */
 .window-container {
 	display: flex;
 	padding: 3rem;
-	height: 100%;
+	max-height: 80%;
 	position: relative;
 }
 
@@ -339,7 +293,6 @@
 	text-align:center;
 }
 .window {
-	/* Add shadows to create the "card" effect */
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 	transition: 0.3s;
 	width: 70vw;
@@ -368,21 +321,17 @@
 }
 
 /* On mouse-over, add a deeper shadow */
-.rules:hover {
+.window:hover {
 	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 .rules-heading {
-	font-family: 'VT323', monospace;
 	text-transform: uppercase;
 	font-size: 6rem;
-	font-weight: 100;
 }
 .rules-details {
-	font-family: 'VT323', monospace;
 	list-style-type: none; /* Remove bullets */
 	font-size: 2.3rem;
-	font-weight: 100;
 }
 
 .start-button {
@@ -403,10 +352,7 @@
 	top:2vh;
 	background-color: #acbefc;
 	background-size: cover;
-	border-radius: 2rem;flex: initial;
-	flex-flow: row;
-	align-items: center;
-	justify-content: center;
+	border-radius: 2rem;
 	font-family: 'VT323', monospace;
 	padding:1rem;
 	font-size: 2.3rem;
@@ -434,53 +380,6 @@
 	100% {
 		-webkit-transform: rotateY(0);
 		transform: rotateY(0);
-		opacity: 1;
-	}
-}
-
-@-webkit-keyframes slit-in-vertical {
-	0% {
-		-webkit-transform: translateZ(-800px) rotateY(90deg);
-		transform: translateZ(-800px) rotateY(90deg);
-		opacity: 0;
-	}
-	54% {
-		-webkit-transform: translateZ(-160px) rotateY(87deg);
-		transform: translateZ(-160px) rotateY(87deg);
-		opacity: 1;
-	}
-	100% {
-		-webkit-transform: translateZ(0) rotateY(0);
-		transform: translateZ(0) rotateY(0);
-	}
-}
-@keyframes slit-in-vertical {
-	0% {
-		-webkit-transform: translateZ(-800px) rotateY(90deg);
-		transform: translateZ(-800px) rotateY(90deg);
-		opacity: 0;
-	}
-	54% {
-		-webkit-transform: translateZ(-160px) rotateY(87deg);
-		transform: translateZ(-160px) rotateY(87deg);
-		opacity: 1;
-	}
-	100% {
-		-webkit-transform: translateZ(0) rotateY(0);
-		transform: translateZ(0) rotateY(0);
-	}
-}
-
-@keyframes fadeIn {
-	0% {
-		opacity: 0;
-	}
-
-	25% {
-		opacity: 1;
-	}
-
-	100% {
 		opacity: 1;
 	}
 }
