--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,7 @@
 }
 
 .player-action {
-	width: 32%;
+	width: 20%;
 	height: 80%;
 	display: flex;
 	flex-direction: column;
@@ -64,15 +64,36 @@
 	padding-left: 2vw;
 }
 
+.opponent-icon{
+	width: 9%;
+	height: auto;
+	max-height: 27%;
+	position: relative;
+	top:50%;
+}
+
+.top-icon{
+	width: 8%;
+	height: auto;
+	max-height: 15%;
+	position: relative;
+	left:25%;
+}
+
+.player-icon{
+	width: 18%;
+	height: auto;
+}
+
 .player-button {
 	cursor: pointer;
 	position: relative;
-	left: 6vw;
 	display: inline-block;
 	background-color: #901800;
 	padding: 0.3em 1.2em;
 	border: 0.16em solid rgba(255, 255, 255, 0);
 	border-radius: 1em;
+	margin-left: 6rem;
 	box-sizing: border-box;
 	text-decoration: none;
 	font-family: 'Press Start 2P', cursive;
@@ -148,6 +169,9 @@
 	width: 100%;
 	display: flex;
 	flex-direction: column;
+	background-color: #a2b3ee;
+	border-width: 3rem;
+	border: 10px double white;
 }
 
 .gameplayfield-section {
@@ -221,9 +245,9 @@
 
 .card {
 	cursor: pointer;
-	width: 90px;
-	height: 140px;
-	max-height: 95%;
+	width: 100px;
+	height: 150px;
+	max-height: 100%;
 	margin-right: -60px;
 	border-radius: 4px;
 	transition: all 0.5s cubic-bezier(0.25, 0.8, 0.25, 1);
